# tavis

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
docs/: data_collection.md  extending_robots.md  extending_tasks.md  galt.md  ood_modes.md
quest_app/: README.md
quest_app/source/Quest_Teleop/Assets/: InputSystem_Actions.inputactions  StereoEyeShader.shader
quest_app/source/Quest_Teleop/Assets/Scenes/: SampleScene.unity
quest_app/source/Quest_Teleop/Assets/Scripts/: QuestTeleopStreamManager.cs
quest_app/source/Quest_Teleop/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
quest_app/source/Quest_Teleop/Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
quest_app/source/Quest_Teleop/Assets/XR/Settings/: OpenXR Package Settings.asset
quest_app/source/Quest_Teleop/ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset
scripts/: eval_benchmark.py  eval_policy.py  print_benchmark_results.py  teleop_main.py  train_policy.py
tavis/: __init__.py  _version.py  download_assets.py  make_env.py  math_utils.py
tavis/actions/: __init__.py  gripper_mimic_action.py
tavis/benchmark/: suites.py
tavis/controllers/: __init__.py  nullspace_ik.py
tavis/eval/: __init__.py  core.py  galt.py
tavis/mdp/: __init__.py  observations.py  resets.py
tavis/robots/: __init__.py  gr1t2.py  reachy2.py
tavis/tasks/: __init__.py  _common.py  blocked_clutter_pick_cube.py  clutter_pick_cube.py  clutter_pick_lift.py  conditional_pick.py  multi_shelf_scan.py  occluded_reach.py  peeking_box.py  wait_then_act.py
tavis/teleop/: __init__.py  quest_teleop.py
tavis/wrappers/: __init__.py  canonical_frame_wrapper.py  experiment_wrapper.py  generic_torso_experiment_wrapper.py  init_pose_wrapper.py
